Remove react completely and refactor into single html file (+404)

--- a/public/404.html
+++ b/public/404.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>404</title>
+  <title>Aleksandr Vorontsov | 404</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software" />
-  <meta property="og:title" content="Aleksandr Vorontsov" />
-  <meta property="og:description" content="Student at King's College London" />
+  <meta name="description" content="Aleksandr Vorontsov, Software Developer" />
+  <meta property="og:title" content="Aleksandr Vorontsov | 404" />
+  <meta property="og:description" content="Software Engineer" />
   <meta property="og:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
-  <meta property="og:url" content="https://vorontsov.co.uk/" />
+  <meta property="og:url" content="https://vorontsov.co.uk/404" />
   <meta name="twitter:title" content="Aleksandr Vorontsov" />
-  <meta name="twitter:description" content="Student at King's College London" />
+  <meta name="twitter:description" content="Software Engineer" />
   <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
-  <meta name="theme-color" content="#CE9FFC" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC">
-  <script type="text/javascript">
-    var segmentCount = 0;
-    var l = window.location;
-    l.replace(
-      l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-      l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?p=/' +
-      l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-      (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-      l.hash
-    );
-  </script>
-</head>
+  <meta name="theme-color" content="#7367f0" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#7367f0">
+  <link rel="stylesheet" type="text/css" href="/css/stylesheet.min.css" media="all" async />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" media="all" async />
 
 <body>
+  <div class="container-fluid">
+    <div class="header vertical-center">
+      <div class=" text-center horizontal-center">
+        <div class="gradient-text">
+          <h1>Page not found</h1>
+          <h3>vorontsov.co.uk does not have any other pages.</h3>
+          <a href="https://vorontsov.co.uk">Click here to go the main page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class=" footer text-center">
+    Copyright© 2021, Aleksandr Vorontsov
+  </footer>
 </body>
 
 </html>
