--- a/index.html
+++ b/index.html
@@ -1,1 +1,230 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Aleksandr Vorontsov</title><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"/><meta name="keywords" content="Aleksandr,Vorontsov,London,UK,Developer,Web,Software,Engineer"/><meta name="description" content="Aleksandr Vorontsov, Graduate Software Engineer at Visa"/><meta property="og:title" content="Aleksandr Vorontsov"/><meta property="og:description" content="Graduate Software Engineer at Visa"/><meta property="og:image" content="https://vorontsov.co.uk/public/images/AV-s.png"/><meta property="og:url" content="https://vorontsov.co.uk/"/><meta name="twitter:title" content="Aleksandr Vorontsov"/><meta name="twitter:description" content="Graduate Software Engineer at Visa"/><meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png"/><meta name="theme-color" content="#CE9FFC"/><meta name="apple-mobile-web-app-status-bar-style" content="#CE9FFC"><link rel="stylesheet" href="/css/stylesheet.min.css" media="all" async/><link rel="shortcut icon" type="image/png" href="/images/favicon.png" media="all" async/><script type="text/javascript">!function(i){if(i.search){var a={};i.search.slice(1).split("&").forEach((function(i){var l=i.split("=");a[l[0]]=l.slice(1).join("=").replace(/~and~/g,"&")})),void 0!==a.p&&window.history.replaceState(null,null,i.pathname.slice(0,-1)+(a.p||"")+(a.q?"?"+a.q:"")+i.hash)}}(window.location)</script><body><noscript><h1>Aleksandr Vorontsov</h1><h2>Graduate Software Engineer at Visa</h2><p>This website looks much better with JS enabled</p></noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,l=t[0],a=t[1],f=t[2],c=0,s=[];c<l.length;c++)i=l[c],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(p&&p(t);s.length;)s.shift()();return u.push.apply(u,f||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,l=1;l<r.length;l++){var a=r[l];0!==o[a]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/";var l=this["webpackJsonpa-vorontsov.github.io"]=this["webpackJsonpa-vorontsov.github.io"]||[],a=l.push.bind(l);l.push=t,l=l.slice();for(var f=0;f<l.length;f++)t(l[f]);var p=a;r()}([])</script><script src="/static/js/2.6bacc19a.chunk.js"></script><script src="/static/js/main.26c9e273.chunk.js"></script></body></head></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Aleksandr Vorontsov</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="keywords" content="Aleksandr Vorontsov,London,UK,Developer,Web,Software" />
+  <meta name="description" content="Aleksandr Vorontsov, Software Developer" />
+  <meta property="og:title" content="Aleksandr Vorontsov" />
+  <meta property="og:description" content="Software Engineer" />
+  <meta property="og:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
+  <meta property="og:url" content="https://vorontsov.co.uk/" />
+  <meta name="twitter:title" content="Aleksandr Vorontsov" />
+  <meta name="twitter:description" content="Software Engineer" />
+  <meta name="twitter:image" content="https://vorontsov.co.uk/public/images/AV-s.png" />
+  <meta name="theme-color" content="#7367f0" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#7367f0">
+  <link rel="stylesheet" type="text/css" href="/css/stylesheet.min.css" media="all" async />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" media="all" async />
+
+<body>
+  <div class="container-fluid">
+    <div class="header vertical-center">
+      <div class=" text-center horizontal-center">
+        <div class="gradient-text">
+          <h1>Aleksandr Vorontsov</h1>
+        </div>
+        <div class="p--8">
+          <p>
+            Graduate Software Engineer at <a href="https://www.visa.co.uk/" target="_blank" rel="noopener noreferrer"
+              class="purple bold">Visa</a>
+          </p>
+          <p>
+            <code>printf "%s@%s.co.uk" "aleksandr" "vorontsov"</code>
+          </p>
+        </div>
+        <div class="p--8">
+          <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer"
+            href="https://www.linkedin.com/in/aleksvorontsov">
+            <img height="25" width="25" src="https://vorontsov.co.uk/images/linkedin.svg" alt="linkedin logo" />
+          </a>
+          <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer"
+            href="https://www.github.com/a-vorontsov">
+            <img height="25" width="25" src="https://vorontsov.co.uk/images/github.svg" alt="github logo" />
+          </a>
+          <a class="purple h4 p--8 icon-link" target="_blank" rel="noopener noreferrer"
+            href="/AleksandrVorontsov-CV.pdf">
+            <img height="25" width="25" src="https://vorontsov.co.uk/images/cv.svg" alt="CV logo" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr class="purple" style="width: 50%; filter: blur(1px);" />
+  <div class="container-fluid">
+    <div class="text-center">
+      <div class="vertical-center ">
+        <div class="horizontal-center col-12 col-md-8 col-md-offset-2">
+          <h1 class="p--16">Projects</h1>
+          <div class="row p--16">
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/aver.webp" class="card-img" alt="Aver">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/aver" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">Aver</a></h3>
+                      <p>Language</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/weather.webp" class="card-img" alt="weather">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://weather.vorontsov.co.uk/" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">weather</a></h3><a
+                        href="https://github.com/a-vorontsov/weather" target="_blank" rel="noopener noreferrer"
+                        class="purple disabled">Github
+                        repo</a>
+                      <p>CLI tool</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/git-gud.webp" class="card-img" alt="git-gud">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://git-gud.vorontsov.co.uk/" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">git-gud</a></h3><a
+                        href="https://github.com/a-vorontsov/git-gud" target="_blank" rel="noopener noreferrer"
+                        class="purple disabled">Github
+                        repo</a>
+                      <p>CLI tool</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/sashamaps.webp" class="card-img" alt="SashaMaps">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/SashaMaps" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">SashaMaps</a></h3>
+                      <p>Android App</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/receiptful.webp" class="card-img" alt="Receiptful">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/Receiptful" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">Receiptful</a></h3>
+                      <p>Web App</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/illustraite.webp" class="card-img" alt="IllustrAIte">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/IllustrAIte-Front-End"
+                          target="_blank" rel="noopener noreferrer" class="purple disabled semi-bold">IllustrAIte</a>
+                      </h3>
+                      <p>Web App/Game</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/filmspottr.webp" class="card-img" alt="FilmSpottr">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://filmspottr.vorontsov.co.uk" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">FilmSpottr</a></h3><a
+                        href="https://github.com/a-vorontsov/FilmSpottr" target="_blank" rel="noopener noreferrer"
+                        class="purple disabled">Github
+                        repo</a>
+                      <p>Web App</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/shirt-or-not-shirt.webp" class="card-img"
+                    alt="Shirt-or-not-Shirt">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://ichack.vorontsov.co.uk" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">Shirt-or-not-Shirt</a>
+                      </h3><a href="https://github.com/a-vorontsov/shirt-or-not-shirt" target="_blank"
+                        rel="noopener noreferrer" class="purple disabled">Github repo</a>
+                      <p>Web App</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/particle.webp" class="card-img" alt="Particle">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/Particle" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">Particle</a></h3>
+                      <p>Desktop Game</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/rps.webp" class="card-img" alt="RockPaperSplat-web">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://rockpapersplat.vorontsov.co.uk" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">RockPaperSplat-web</a>
+                      </h3><a href="https://github.com/a-vorontsov/rockpapersplat-web" target="_blank"
+                        rel="noopener noreferrer" class="purple disabled">Github repo</a>
+                      <p>Web Page</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-lg-3 col-md-3 col-sm-4">
+              <div class="card bg-white">
+                <div class="card-body"><img src="/images/golink.webp" class="card-img" alt="GoLink">
+                  <div class="card-img-overlay text-center ">
+                    <div>
+                      <h3 class="project-title"><a href="https://github.com/a-vorontsov/golink" target="_blank"
+                          rel="noopener noreferrer" class="purple disabled semi-bold">GoLink</a></h3>
+                      <p>Mobile App</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class=" footer text-center">
+    Copyright© 2021, Aleksandr Vorontsov
+  </footer>
+</body>
+
+</html>
