Add projects, clean up repo

--- a/public/404.html
+++ b/public/404.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container-fluid">
     <div class="header vertical-center">
-      <div class=" text-center horizontal-center">
+      <div class="text-center horizontal-center">
         <div class="gradient-text">
           <h1>Page not found</h1>
           <h3>vorontsov.co.uk does not have any other pages.</h3>
@@ -31,8 +31,8 @@
       </div>
     </div>
   </div>
-  <footer class=" footer text-center">
-    Copyright© 2021, Aleksandr Vorontsov
+  <footer class="footer text-center">
+    <a href="https://1mb.club/" class="purple bold" target="_blank" rel="noopener noreferrer">1MB club</a> | <a href="https://github.com/a-vorontsov/a-vorontsov.github.io" class="purple bold" target="_blank" rel="noopener noreferrer">Source code</a>
   </footer>
 </body>
 
